Wed May 18 22:45:26 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/lib/console/size.rb (IO#console_size): new
	  method.  (EXPERIMENTAL)

Wed May 18 22:41:51 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h: add for internal use only.

Wed May 18 22:36:43 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (setup_exception): internal exception should be hidden

Wed May 18 20:25:04 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/timeout.rb (Timeout#timeout): don't leak "execution expired"
	  exception. [Bug #4283] [ruby-core:34534].

Wed May 18 06:09:24 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/cmath.rb:  Add some examples and improve documentation.  Patch by
	  Sandor Szucs.  [Ruby 1.9 - Bug #4727]

Wed May 18 05:40:31 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/benchmark.rb:  Remove nodoc from Benchmark::Job and
	  Benchmark::Report.  Patch by Sandor Szucs.  [Ruby 1.9 - Bug #4726]

Wed May 18 05:29:26 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/webrick/compat.rb:  Improve documentation.  Patch by Sandor
	  Szucs.  [Ruby 1.9 - Bug #4725]

Wed May 18 05:10:35 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/tracer.rb:  Improve documentation.  Patch by Richard Ramsden.
	  [Ruby 1.9 - Feature #4720]

Wed May 18 04:53:41 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/cmath.rb:  Improve documentation.  Patch by Jason Dew.
	  [Ruby 1.9 - Feature #4717]

Wed May 18 04:50:24 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/net/ftp.rb:  Improve documentation.  Patch by Vincent Batts.
	  [Ruby 1.9 - Bug #4710]

Wed May 18 03:14:49 2011  Eric Hodel  <drbrain@segment7.net>

	* test/test_singleton.rb:  Add tests from lib/singleton.rb.  Patch by
	  Pete Higgins.  [Ruby 1.9 - Bug #4715]

Wed May 18 03:03:07 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/singleton.rb:  Improve documentation.  Patch by Pete Higgins.
	  [Ruby 1.9 - Bug #4709]

Wed May 18 01:02:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
